Fixing still visible text when left panel is close

--- a/development/frontend/styles/leftPanel.stylesheet.scss
+++ b/development/frontend/styles/leftPanel.stylesheet.scss
@@ -94,3 +94,7 @@ body {
   position: absolute;
   bottom: 20%;
 }
+
+.text{
+  margin-left: 2px;
+}
